while waiting for a final blurb, lets add one generic for aarch64

--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -46,7 +46,7 @@
       </div>
       <div class="row">
         <div class="col-md-3 product-feature">
-        <p>${_('These images bla bla bla.')}</p>
+        <p>${_('These images are for the new 64-bit ARM architecture, also known as ARMv8 or ARM64.')}</p>
         </div>
         <div class="col-md-9">
           <div class="white">
@@ -106,7 +106,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('These images bla bla bla.')}</p>
+        <p>${_('These images are for the new 64-bit ARM architecture, also known as ARMv8 or ARM64.')}</p>
         </div>
       </div>
       <div class="row">
@@ -151,7 +151,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('These images bla bla bla.')}</p>
+        <p>${_('These images are for the new 64-bit ARM architecture, also known as ARMv8 or ARM64.')}</p>
         </div>
       </div>
       <div class="row">
