--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -220,63 +220,20 @@
     </div>
   </div>
 
-  <!-- Secondary Arches -->
+  <!-- Alt Arches -->
   <div class="jumbotron main-head top-space visible-lg hidden-xs hidden-sm hidden-md">
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
-        <h2>${_('Secondary Architectures')}</h2>
+        <h2>${_('Alternate Architectures')}</h2>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 product-feature">
+        <div class="col-xs-12 product-feature">
         <p>${_('These are additional architectures supported by Fedora beyond the standard set.')}</p>
         </div>
-        <div class="col-lg-9">
-          <div class="white">
-            <div class="col-lg-1">
-            <img src="/static/images/mips.png" />
-            </div>
-            <div class="col-lg-4">
-            <h3>${_('MIPS Architecture')}</h3>
-            </div>
-            <div class="col-lg-4 col-lg-offset-3">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-lg-1">
-            <img src="/static/images/ppc.png" />
-            </div>
-            <div class="col-lg-4">
-            <h3>${_('PowerPC Architecture')}</h3>
-            </div>
-            <div class="col-lg-4 col-lg-offset-3">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-lg-1">
-            <img src="/static/images/s390x.png" />
-            </div>
-            <div class="col-lg-4">
-            <h3>${_('s390x Architecture')}</h3>
-            </div>
-            <div class="col-lg-4 col-lg-offset-3">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-lg-1">
-            <img src="/static/images/aarch64.png" />
-            </div>
-            <div class="col-lg-4">
-            <h3>${_('ARM AArch64 Architecture')}</h3>
-            </div>
-            <div class="col-lg-4 col-lg-offset-3">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
-            </div>
-          </div>
+        <div class="col-xs-12 text-center">
+        <p><a class="btn btn-lg btn-primary" href="alt/" role="button">${_('Download')}</a></p>
         </div>
       </div>
     </div>
