more content for the s390x box

--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -426,12 +426,12 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 top-margin">
-        <h2>${_('Power Architecture')}</h2>
+        <h2>${_('s390x Architecture')}</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-md-3 product-feature">
-        <p>${_('These images are for installation on IBM Power systems or OpenPOWER systems.')}</p>
+        <p>${_('If you want to install Fedora on IBM z systems, then you are looking for this architecture.')}</p>
         </div>
         <div class="col-md-9">
           <div class="white">
@@ -448,34 +448,6 @@
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/cloud.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Cloud')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['ARM_Minimal']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Minimal-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
-          <div class="white">
-            <div class="col-md-1">
-            <img src="/static/images/docker.png" />
-            </div>
-            <div class="col-md-4">
-            <h3>${_('Fedora Docker')}</h3>
-            </div>
-            <div class="col-md-3">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['ARM_Minimal']}</p>
-            </div>
-            <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Minimal-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -486,12 +458,12 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
-        <h2>${_('Power Architecture')}</h2>
+        <h2>${_('s390x Architecture')}</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('These images are for installation on IBM Power systems or OpenPOWER systems.')}</p>
+        <p>${_('If you want to install Fedora on IBM z systems, then you are looking for this architecture.')}</p>
         </div>
       </div>
       <div class="row">
@@ -502,24 +474,6 @@
           <div class="col-xs-9">
           <h3>${_('Fedora Server')}</h3>
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-xs-3">
-          <img src="/static/images/cloud.png" />
-          </div>
-          <div class="col-xs-9">
-          <h3>${_('Fedora Cloud')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Minimal-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-xs-3">
-          <img src="/static/images/docker.png" />
-          </div>
-          <div class="col-xs-9">
-          <h3>${_('Fedora Docker')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Minimal-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
@@ -531,12 +485,12 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
-        <h2>${_('Power Architecture')}</h2>
+        <h2>${_('s390x Architecture')}</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('These images are for installation on IBM Power systems or OpenPOWER systems.')}</p>
+        <p>${_('If you want to install Fedora on IBM z systems, then you are looking for this architecture.')}</p>
         </div>
       </div>
       <div class="row">
@@ -549,28 +503,6 @@
           </div>
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/cloud.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('Fedora Cloud')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Minimal-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/docker.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('Fedora Docker')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Minimal-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
@@ -590,19 +522,19 @@
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center whitebox">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-          <p>${Markup(_('A wiki page with information about Power Architecture on Fedora is available on the &lt;a href="%s"&gt;Fedora Project Wiki&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Architectures/PowerPC'))}</p>
+          <p>${Markup(_('A wiki page with information about Power Architecture on Fedora is available on the &lt;a href="%s"&gt;Fedora Project Wiki&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Architectures/s390x'))}</p>
         </div>
         </div>
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center whitebox">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
-          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;ppc@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/ppc'))}</p>
+          <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;s390x@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/s390x'))}</p>
         </div>
         </div>
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center whitebox">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-ppc&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-ppc'))}</p>
+          <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-s390x&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-s390x'))}</p>
         </div>
         </div>
       </div>
