shorten the workstation title for mobile

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -136,7 +136,7 @@
           <img src="/static/images/workstation.png" />
           </div>
           <div class="col-xs-9">
-          <h3>${_('Fedora Workstation')}</h3>
+          <h3>${_('Workstation')}</h3>
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download 64 bit')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
@@ -145,7 +145,7 @@
           <img src="/static/images/workstation.png" />
           </div>
           <div class="col-xs-9">
-          <h3>${_('Fedora Workstation')}</h3>
+          <h3>${_('Workstation')}</h3>
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/armhfp/Images/Fedora-Server-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download 32 bit')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
         </div>
