remove secondary mobile coding, we use the same section for all devices now

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -235,7 +235,7 @@
   </div>
 
   <!-- Alt Arches -->
-  <div class="jumbotron main-head top-space visible-lg hidden-xs hidden-sm hidden-md">
+  <div class="jumbotron main-head top-space">
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
@@ -248,122 +248,6 @@
         </div>
         <div class="col-xs-12 text-center">
         <p><a class="btn btn-lg btn-primary" href="alt/" role="button">${_('Download')}</a></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Secondary Arches mobile phones-->
-  <div class="jumbotron main-head top-space visible-xs">
-    <div class="container using">
-      <div class="row">
-        <div class="col-xs-12">
-        <h2>${_('Secondary Architectures')}</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 product-feature">
-        <p>${_('These images are for ARM-based mediacenters, kiosks, laptops, and other ARM-powered devices where a graphical interface is desired.')}</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="white">
-          <div class="col-xs-3">
-          <img src="/static/images/mips.png" />
-          </div>
-          <div class="col-xs-9">
-          <h3>${_('MIPS Architecture')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-xs-3">
-          <img src="/static/images/ppc.png" />
-          </div>
-          <div class="col-xs-9">
-          <h3>${_('PowerPC Architecture')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-xs-3">
-          <img src="/static/images/s390x.png" />
-          </div>
-          <div class="col-xs-9">
-          <h3>${_('s390x Architecture')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-xs-3">
-          <img src="/static/images/aarch64.png" />
-          </div>
-          <div class="col-xs-9">
-          <h3>${_('ARM AArch64 Architecture')}</h3>
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${Markup(_('View Images &gt;'))}</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Secondary Arches mobile tablets-->
-  <div class="jumbotron main-head top-space visible-sm-md hidden-xs hidden-lg">
-    <div class="container using">
-      <div class="row">
-        <div class="col-xs-12">
-        <h2>${_('Secondary Architectures')}</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 product-feature">
-        <p>${_('These images are for ARM-based mediacenters, kiosks, laptops, and other ARM-powered devices where a graphical interface is desired.')}</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/mips.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('MIPS Architecture')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/ppc.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('PowerPC Architecture')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-KDE-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/s390x.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('s390x Architecture')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-KDE-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
-          </div>
-        </div>
-        <div class="white">
-          <div class="col-sm-3">
-          <img src="/static/images/aarch64.png" />
-          </div>
-          <div class="col-sm-5">
-          <h3>${_('ARM AArch64 Architecture')}</h3>
-          </div>
-          <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Xfce-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
-          </div>
         </div>
       </div>
     </div>
