--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="row">
         <div class="col-md-3 product-feature">
-        <p>${_('These images are for the new 64-bit ARM architecture, also known as ARMv8 or ARM64.')}</p>
+        <p>${Markup(_('These images are for use with AArch64 &ldquo;Server Base System Architecture&rdquo; (SBSA) compliant systems or Single Board Computers.'))}</p>
         </div>
         <div class="col-md-9">
           <div class="white">
@@ -107,7 +107,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('These images are for the new 64-bit ARM architecture, also known as ARMv8 or ARM64.')}</p>
+        <p>${Markup(_('These images are for use with AArch64 &ldquo;Server Base System Architecture&rdquo; (SBSA) compliant systems or Single Board Computers.'))}</p>
         </div>
       </div>
       <div class="row">
@@ -152,7 +152,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('These images are for the new 64-bit ARM architecture, also known as ARMv8 or ARM64.')}</p>
+        <p>${Markup(_('These images are for use with AArch64 &ldquo;Server Base System Architecture&rdquo; (SBSA) compliant systems or Single Board Computers.'))}</p>
         </div>
       </div>
       <div class="row">
