--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -185,19 +185,19 @@
       </div>
       <div class="row top-margin">
         <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center whitebox">
+        <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
           <p>${Markup(_('A guide for Fedora on AArch64, including a list of supported hardware platforms and installation instructions is available at the &lt;a href="%s"&gt;Fedora Documentation Site&lt;/a&gt;.') % ('https://docs.fedoraproject.org/'))}</p>
         </div>
       	</div>
         <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center whitebox">
+        <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
           <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;arm@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/arm'))}</p>
         </div>
         </div>
         <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center whitebox">
+        <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
           <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-arm&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-arm'))}</p>
         </div>
@@ -375,19 +375,19 @@
       </div>
       <div class="row top-margin">
         <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center whitebox">
+        <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
           <p>${Markup(_('A wiki page with information about Power Architecture on Fedora is available on the &lt;a href="%s"&gt;Fedora Project Wiki&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Architectures/PowerPC'))}</p>
         </div>
         </div>
         <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center whitebox">
+        <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
           <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;ppc@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/ppc'))}</p>
         </div>
         </div>
         <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center whitebox">
+        <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
           <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-ppc&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-ppc'))}</p>
         </div>
@@ -497,19 +497,19 @@
       </div>
       <div class="row top-margin">
         <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center whitebox">
+        <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
           <p>${Markup(_('A wiki page with information about Power Architecture on Fedora is available on the &lt;a href="%s"&gt;Fedora Project Wiki&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Architectures/s390x'))}</p>
         </div>
         </div>
         <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center whitebox">
+        <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
           <p>${Markup(_('Users and developers are also available on the mailing list at &lt;a href="%s"&gt;s390x@lists.fedoraproject.org&lt;/a&gt;.') % ('https://admin.fedoraproject.org/mailman/listinfo/s390x'))}</p>
         </div>
         </div>
         <div class="col-md-4 col-xs-12">
-        <div class="col-xs-12 text-center whitebox">
+        <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
           <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-s390x&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-s390x'))}</p>
         </div>
