--- a/getfedora.org/data/content/verify.html
+++ b/getfedora.org/data/content/verify.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="row bottom-space">
-        <div class="col-sm-4 col-xs-12 highlight productitem workstation">
+        <div class="col-sm-4 col-xs-12 highlight productitem">
             <div class="productitem-logo">
                 <img src="${path}/static/images/logo-color-workstation.png" />
             </div>
@@ -44,7 +44,7 @@
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-i386-CHECKSUM">${_('For 32-bit images')}</a>
             </div>
         </div>
-        <div class="col-sm-4 col-xs-12 highlight productitem server">
+        <div class="col-sm-4 col-xs-12 highlight productitem">
             <div class="productitem-logo">
                 <img src="${path}/static/images/logo-color-server.png" />
             </div>
