replace cloud logo with atomic logo in the verify page

--- a/getfedora.org/data/content/verify.html
+++ b/getfedora.org/data/content/verify.html
@@ -55,9 +55,9 @@
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem cloud">
             <div class="productitem-logo">
-                <img src="${path}/static/images/logo-color-cloud.png" />
+                <img src="${path}/static/images/logo-color-atomic.png" />
             </div>
-            <h4 class="uppercase">${_('Cloud')}</h4>
+            <h4 class="uppercase">${_('Atomic')}</h4>
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Cloud_Images-x86_64-${global_variables.release['curr_id']}-CHECKSUM">${_('For Base images')}</a>
             </div>
