update the get help info on alt.fpo

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -466,9 +466,9 @@
         </div>
       </div>
       <div class="row top-margin">
-        <div class="col-xs-12 text-center">
+        <div class="col-xs-12 text-center help">
           <h4><i class="fa fa-fw header-icon fa-question-circle"></i>${_('General Help Using Fedora')}</h4>
-          <h5><p>${Markup(_('Sometimes you may encounter an issue with this spin that you can get help with using general Fedora support resources. A list of resources is available at the &lt;a href="%s"&gt;Fedora &ldquo;Get Help&rdquo; page&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Communicating_and_getting_help'))}</p></h5>
+          <h4><p>${Markup(_('Need some help with Fedora? Check out &lt;a href="%s"&gt;Ask Fedora&lt;/a&gt;, where you can read archives of questions from other users, or ask your own question.') % ('https://ask.fedoraproject.org/'))}</p></h4>
         </div>
       </div>
     </div>
